Added JVM memory flag for hiveql examples