@@ -16,3 +16,5 @@ libraryDependencies += "org.apache.spark" %% "spark-hive" % "1.6.0"
 
 libraryDependencies += "org.apache.spark" %% "spark-graphx" % "1.6.0"
 
+// needed to make the hiveql examples run at least on Linux
+javaOptions in run += "-XX:MaxPermSize=128M"
