@@ -1,5 +1,10 @@
 # _HiveQL_ Examples
 
+Note: these examples are all dependent on giving the JVM more PermGen space using
+the following JVM argument:
+
+    -XX:MaxPermSize=128M
+
 | File                     | What's Illustrated    |
 |--------------------------|-----------------------|
 | SimpleUDF.scala          | Registering and calling a user-defined function in a Hive query -- simple version. |
